...
                  onSelected: (index) => _collaborationAction(context, index),
                ),
              ],
            ),
            body: model.umlModel.types.isEmpty
                ? NoDataView(
                    'No types',
                    'Your model doesn\'t have any types yet. Press the button to create one.',
                    ['Create Type'],
                    (_) => _newType(context))
                : ListView(
                    padding: const EdgeInsets.only(top: 10, bottom: 20),
                    children: model.umlModel.types.values
                        .where((type) => !type.isEmpty)
                        .map((type) => TypeSection(
...
