...
        body: _models == null
            ? Container()
            : _models!.isEmpty
                ? NoDataView(
                    'No Models',
                    'It looks pretty empty here. Create a model to get started.',
                    ['Create Model', 'Load Example'],
                    (index) => _noDataAction(context, index))
                : ListView(
                    children: _models!
                        .map((model) => ModelRow(
                              model,
                              onTap: () async {
...
        _models?.sort();
      });
    }
  }

  void _loadExample() async {
    final model = await ModelsManager.newModel('Example');
    await model.loadExample();
    setState(() => _models?.add(model));
  }

  void _openModel(BuildContext context, Model model) async {
    await Navigator.push(
...
