...
        actions: [
          TextButton(
            child: const Text('Cancel'),
            onPressed: () => Navigator.pop(context),
          ),
          TextButton(
            child: const Text('Join',
                style: const TextStyle(fontWeight: FontWeight.bold)),
            onPressed: _isJoinButtonEnabled
                ? () {
                    final trimmedText = _textEditingController.text.trim();
                    final uuid = trimmedText.startsWith('collaborate://')
                        ? trimmedText.split('/').last
...
